namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    purpose: development
