pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-pod
  namespace: nginx
  labels:
    purpose: development

spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80

  tolerations:
    - key: "prod"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
      # this means if any pod, having key=prod, value=true with Noscheduling then it should tolerate it to schedule.
