service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: nginx

spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80                      # host port
      targetPort: 80                # container port
  type: ClusterIP
